--- a/bus_terminal_frontend/src/app/ar-edit-resevertion/ar-edit-resevertion.component.html
+++ b/bus_terminal_frontend/src/app/ar-edit-resevertion/ar-edit-resevertion.component.html
@@ -72,7 +72,7 @@
                         <div *ngFor="let bus of buses">
                           <!-- <div *ngIf="destination.time_of_day == time"> -->
                           <mat-option [value]="bus.id">
-                            {{ bus.company }} {{ bus.license_plate }}
+                            {{ bus.license_plate }} {{ bus.license_plate }}
                           </mat-option>
                           <!-- </div> -->
                         </div>
