--- a/bus_terminal_frontend/src/app/view-my-penalties/view-my-penalties.component.html
+++ b/bus_terminal_frontend/src/app/view-my-penalties/view-my-penalties.component.html
@@ -152,7 +152,7 @@
                         Status
                       </th>
                       <td mat-cell *matCellDef="let element">
-                         {{ element.status }}
+                         {{ element.reservation_status }}
                       </td>
                     </ng-container>
 
