--- a/bus_terminal_frontend/src/app/view-my-slots/view-my-slots.component.html
+++ b/bus_terminal_frontend/src/app/view-my-slots/view-my-slots.component.html
@@ -173,12 +173,12 @@
                         Status
                       </th>
                       <td mat-cell *matCellDef="let element">
-                        <div *ngIf="element.status == 'P'">Pending Approval</div>
-                        <div *ngIf="element.status == 'A'">Approved</div>
-                        <div *ngIf="element.status == 'PC'">Pending Cancellation</div>
-                        <div *ngIf="element.status == 'C'">Cancelled</div>
-                        <div *ngIf="element.status == 'DL'">Delayed</div>
-                        <div *ngIf="element.status == 'D'">Departed</div>
+                        <div *ngIf="element.reservation_status == 'P'">Pending Approval</div>
+                        <div *ngIf="element.reservation_status == 'A'">Approved</div>
+                        <div *ngIf="element.reservation_status == 'PC'">Pending Cancellation</div>
+                        <div *ngIf="element.reservation_status == 'C'">Cancelled</div>
+                        <div *ngIf="element.reservation_status == 'DL'">Delayed</div>
+                        <div *ngIf="element.reservation_status == 'D'">Departed</div>
                         <!-- {{ element.status }} -->
                       </td>
                     </ng-container>
