--- a/bus_terminal_frontend/src/app/view-my-slots/view-my-slots.component.html
+++ b/bus_terminal_frontend/src/app/view-my-slots/view-my-slots.component.html
@@ -196,7 +196,7 @@
                     <ng-container matColumnDef="action">
                       <th mat-header-cell *matHeaderCellDef>Action</th>
                       <td mat-cell *matCellDef="let row">
-                        <div *ngIf="row.status == 'A' || 'P'">
+                        <div *ngIf="row.reservation_status == 'A' || 'P'">
                           <button
                             mat-raised-button
                             (click)="onOpenCancelDialog(row)"
@@ -370,7 +370,7 @@
                     <ng-container matColumnDef="action">
                       <th mat-header-cell *matHeaderCellDef>Action</th>
                       <td mat-cell *matCellDef="let row">
-                        <div *ngIf="row.status == 'A' || 'P'">
+                        <div *ngIf="row.reservation_status == 'A' || 'P'">
                           <button
                             mat-raised-button
                             (click)="onOpenCancelArrivalDialog(row)"
@@ -523,11 +523,11 @@
                         Status
                       </th>
                       <td mat-cell *matCellDef="let element">
-                        <div *ngIf="element.status == 'A'">Approved</div>
-                        <div *ngIf="element.status == 'PC'">Pending Cancellation</div>
-                        <div *ngIf="element.status == 'C'">Cancelled</div>
-                        <div *ngIf="element.status == 'DL'">Delayed</div>
-                        <div *ngIf="element.status == 'D'">Departed</div>
+                        <div *ngIf="element.reservation_status == 'A'">Approved</div>
+                        <div *ngIf="element.reservation_status == 'PC'">Pending Cancellation</div>
+                        <div *ngIf="element.reservation_status == 'C'">Cancelled</div>
+                        <div *ngIf="element.reservation_status == 'DL'">Delayed</div>
+                        <div *ngIf="element.reservation_status == 'D'">Departed</div>
                       </td>
                     </ng-container>
 
